<resources>
    <string name="app_name">EtbakhlyProvider</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="pass_short">Password Short</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="service">Service</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="working_period">Working period</string>
    <string name="delivery">Delivery</string>
    <string name="surrender">Not delivery</string>
    <string name="areas_covered_by_delivery">Areas covered by delivery</string>
    <string name="commercial_registration_no">Commercial Registration No</string>
    <string name="category">Category</string>
    <string name="delivery_time">Delivery time</string>
    <string name="deliv_time2">Delivery time</string>
    <string name="_15_20_m">15-20 M</string>
    <string name="processing_time">Processing time</string>
    <string name="_3_hour">3 Hour</string>
    <string name="booking_before">Booking before</string>
    <string name="service_provider">Service provider</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="women_and_men">Women and Men</string>
    <string name="there_is_no">There is no</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_short">Password Short</string>
    <string name="next">Next</string>
    <string name="ch_service">Choose Service</string>
    <string name="ch_cat">Choose Category</string>
    <string name="welcome">welcome</string>
    <string name="new_orders">New Orders</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="order_number">Order number:</string>
    <string name="dishes">Dishes</string>
    <string name="reject">Reject</string>
    <string name="r_s">R.S</string>
    <string name="a_m">A.M</string>
    <string name="wallet">Wallet</string>
    <string name="contact_us">Contact us</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="cook_me">Cook me</string>
    <string name="phone">Phone number</string>
    <string name="skip">Skip</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend</string>
    <string name="wait">Wait</string>
    <string name="yes_i_have_read_it_and_agree_to_it">Yes, I have read it and agree to it</string>
    <string name="do_read_our_terms_of_use_and_privacy_policy"><![CDATA[Do read our <font color ="#4D94BE"><a href="http://etbo5ly.coopq8.com/terms#1">Terms of Use</a></font> and <font color ="#4D94BE"><a href="http://etbo5ly.coopq8.com/terms#2">Privacy Policy</a></font>]]></string>
    <string name="cnt_login">You cannot log in without agreeing to the Terms of Use</string>
    <string name="choose_language">Change language</string>
    <string name="choose_country">Choose country</string>
    <string name="accept">Accept</string>
    <string name="prepared">Prepared</string>
    <string name="delivery_in_progress">Delivery in progress</string>
    <string name="delivery_completed">Delivery Completed</string>
    <string name="order_details">Order Details</string>
    <string name="amount">Amount :</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="day_and_date">Day and date</string>
    <string name="price">Price</string>
    <string name="what_is_the_reason_for_rejection">What is the reason for refuse</string>
    <string name="busy">Busy</string>
    <string name="the_place_is_not_in_my_delivery_areas">The place is not in my delivery areas</string>
    <string name="another_reason">Another reason</string>
    <string name="services">Services</string>
    <string name="gallery">Gallery</string>
    <string name="ratings">Ratings</string>
    <string name="delivery_areas">Delivery areas</string>
    <string name="preparing_time">Preparing time</string>
    <string name="service_delivery">Service delivery</string>
    <string name="we_offer_buffet_and_banquet_reservations_for_all_occasions">We offer buffet and banquet reservations for all occasions</string>
    <string name="buffet_booking_service">Buffet booking service</string>
    <string name="we_offer_buffets">We offer buffets for all occasions private and public</string>
    <string name="feasts_booking_service">Feasts booking service</string>
    <string name="we_offer_you_banquet">We offer you banquets for all occasions\n private and public</string>
    <string name="no_gallery_to_show">No gallery to show</string>
    <string name="no_ratings_to_show">No Ratings to show</string>
    <string name="select_your_order">Select your order</string>
    <string name="buffets_menu">Buffets menu</string>
    <string name="feasts_menu">Feasts menu</string>
    <string name="choose_the_dishes">Choose the dishes</string>
    <string name="no_buffets_to_show">No buffets to show</string>
    <string name="no_feasts_to_show">No feasts to show</string>
    <string name="no_dishes_to_show">No dishes to show</string>
    <string name="sent_delivered_handed">sent delivered handed</string>
    <string name="ph_em_found">phone number already exists</string>
    <string name="ch_city">Choose City</string>
    <string name="plz_ch_country">Please Choose Country</string>
    <string name="select_location_on_map">Select Location on Map</string>
    <string name="chef">Chef</string>
    <string name="food_truck">Food Truck</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="men_women">Men and women</string>
    <string name="undefined">undefined</string>
    <string name="dishes_menu">Dishes menu</string>
    <string name="in_advance">in advance</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="sar">SAR</string>
    <string name="order">Order</string>
    <string name="add_buffet">Add Buffet</string>
    <string name="buffet_name">Buffet name</string>
    <string name="feast_name">Feast name</string>
    <string name="number_of_people">Number of people</string>
    <string name="food_menu">Food Menu</string>
    <string name="number">Number</string>
    <string name="add_new">+ Add new</string>
    <string name="add_dishes">Add Dishes</string>
    <string name="dish_name">Dish name</string>
    <string name="calories">Calories</string>
    <string name="dish_size">Dish size</string>
    <string name="description">Description</string>
    <string name="vegan_meal">Vegan meal</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="does_not_contain_trans_fats">Does not contain trans fats</string>
    <string name="sugar_free">Sugar Free</string>
    <string name="photo_required">Photo required</string>
    <string name="update">Update</string>
    <string name="people2">People</string>
    <string name="menu">Menu</string>
    <string name="add_feast">Add Feast</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="delivery_zones">Delivery Zones</string>
    <string name="total_balance">Total Balance</string>
    <string name="suspended_balance">Suspended Balance</string>
    <string name="retractable">Retractable</string>
    <string name="balance_withdraw">Balance withdraw</string>
    <string name="transactions">Transactions</string>
    <string name="discount">Discount</string>
    <string name="customer_service">Customer Service</string>
    <string name="tax">Tax</string>
    <string name="note">Note</string>
    <string name="ch_delivert">Choose Delivery Type</string>
    <string name="ch_zone">Choose Zone</string>
    <string name="day1">1 Day</string>
    <string name="day2">2 Days</string>
    <string name="day3">3 Days</string>
    <string name="order_time">Order time</string>
    <string name="choose_image">choose_image</string>
    <string name="succ">Success</string>
    <string name="add_category">Add category</string>
    <string name="category_name">Category name</string>
    <string name="add">Add</string>
    <string name="update_cat">Update category</string>
    <string name="hour">Hour</string>
    <string name="complete_profile">Complete profile</string>
    <string name="add_zone_cost">Add zone cost</string>
    <string name="enter_zone_cost">Enter zone cost...</string>
    <string name="already_added">Sorry! you have already added</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="updated">Updated</string>
    <string name="add_time">Add time</string>
    <string name="minute">Minute</string>
    <string name="em_exist">email already exists</string>
    <string name="home">Home</string>
    <string name="update_profile">Update profile</string>
    <string name="buffets">Buffets</string>
    <string name="banquets">Banquets</string>
    <string name="offers">Offers</string>
    <string name="more">More</string>
    <string name="please_you_have_to_add_category_from_main_page">Please you have to add category from main page</string>
    <string name="booking_in_advance">Booking in advance</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="suc">Success</string>
    <string name="add_department">Add department</string>
    <string name="select_photo">Select photo</string>
    <string name="upload">Upload images</string>
    <string name="dismiss">Dismiss</string>
    <string name="uploading">Uploading...</string>
    <string name="failed">Failed</string>
    <string name="order_approved">Your order has been approved from</string>
    <string name="order_refused">Your order has been refused</string>
    <string name="your_order_from">Your order from</string>
    <string name="order_num">Order Num :</string>
    <string name="status_pending">Pending</string>
    <string name="delivering">Delivering</string>
    <string name="delivered2">delivered</string>
    <string name="no_not_to_show">No notifications to show</string>
    <string name="change_language">Change language</string>
    <string name="back">Back</string>
    <string name="no_offers">No offers to show</string>
    <string name="add_offer">Add offer</string>
    <string name="offer_name">Offer name</string>
    <string name="offer_details">Offer details</string>
    <string name="offer_end_date">Offer end date</string>
    <string name="booking_date">Booking date</string>
    <string name="status">Status :</string>
    <string name="received_your_order">Received your order</string>
    <string name="delivered">Delivered</string>
    <string name="customer_service_cost">Customer service cost</string>
    <string name="coupon_value">Coupon value</string>
    <string name="total">Total :</string>
    <string name="free">Free</string>
    <string name="not_available">Not available</string>
    <string name="packages">Packages</string>
</resources>