<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activityKitchenDetails"
        android:icon="@drawable/ic_user"
        android:title="@string/profile" />

    <item
        android:id="@+id/activityNotifications"
        android:icon="@drawable/ic_notifications_outlined"
        android:title="@string/notifications" />
    <item
        android:id="@+id/fragmentAddCategory"
        android:icon="@drawable/ic_add"
        android:title="@string/add_category" />
    <item
        android:id="@+id/activityDishes"
        android:icon="@drawable/ic_dish"
        android:title="@string/dishes" />
    <item
        android:id="@+id/activityBuffets"
        android:icon="@drawable/ic_table"
        android:title="@string/packages" />


    <item
        android:id="@+id/activityOffers"
        android:icon="@drawable/ic_offer"
        android:title="@string/offers" />
    <item
        android:id="@+id/fragmentChangeLanguage"
        android:icon="@drawable/ic_lang"
        android:title="@string/change_language" />
    <item
        android:id="@+id/activityMore"
        android:icon="@drawable/ic_more"
        android:title="@string/more" />

    <item
        android:id="@+id/fragmentLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>