<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/what_is_the_reason_for_rejection"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busy"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_place_is_not_in_my_delivery_areas"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/another_reason"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="15dp"
            android:background="@drawable/linear_shape"
            android:visibility="gone">

            <EditText
                android:id="@+id/anotherReason"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_shape2"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</layout>