<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="model"
            type="com.etbakhly_provider.model.SignUpModel" />

    </data>
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity_sign_up.SignUpActivity"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@color/gray0"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/gray0"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/commercial_registration_no"
                android:textColor="@color/gray38"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"


                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/gray36" />

                    <EditText
                        error="@{model.error_name}"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:hint="@string/commercial_registration_no"
                        android:lines="1"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@={model.name}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray4"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/category"
                android:textColor="@color/gray38"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="3dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_pin"
                        app:tint="@color/gray36"
                        />
                    <Spinner
                        android:id="@+id/spinnerServices"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:backgroundTint="@color/gray36"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/delivery_time"
                android:textColor="@color/gray38"
                android:layout_marginTop="10dp"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="3dp"


                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/car"
                        app:tint="@color/gray36"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColorHint="@color/gray4"
                        android:hint="@string/_15_20_m"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={model.name}"
                        error="@{model.error_name}"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/processing_time"
                android:textColor="@color/gray38"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="3dp"


                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:tint="@color/gray36"
                        android:src="@drawable/clock"
                        />
                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        android:lines="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textColorHint="@color/gray4"
                        android:hint="@string/_3_hour"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:text="@={model.name}"
                        error="@{model.error_name}"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/booking_before"
                android:textColor="@color/gray38"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="3dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/clock"
                        app:tint="@color/gray36"
                        />
                    <Spinner
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:backgroundTint="@color/gray36"

                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:text="@string/service_provider"
                android:textColor="@color/gray38"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women"
                    android:textSize="10sp"
                    android:textColor="@color/gray37"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/men"
                    android:textSize="10sp"
                    android:textColor="@color/gray37"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/women_and_men"
                    android:textSize="12sp"
                    android:textColor="@color/gray37"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/there_is_no"
                    android:textSize="10sp"
                    android:textColor="@color/gray37"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</layout>
