<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"

        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_close"
                        app:tint="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/add_category"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/small_stroke_gray"
            android:hint="@string/category_name"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray5"
            android:textSize="14sp" />


        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/small_rounded_primary"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</layout>